--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "framer-motion": "^10.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-flow": "^1.0.3",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.5.0",
+    "reactflow": "^11.5.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
